# ardrone2-calibration

./: CMakeLists.txt  README.md  camera_calibration.cpp  rjw57-office.xml
rjw57-office/: frames.xml
